# python-project-template

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{ cookiecutter.root_dir }}/: .pre-commit-config.yaml  main.py  pyproject.toml  settings.py  setup.cfg
